# agent-desktop

./: CHANGELOG.md  CLAUDE.md  CONCEPTS.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  e2e-macos.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: action_step.rs  actionability.rs  actionability_live_tests.rs  actionability_tests.rs  adapter.rs  capability.rs  context.rs  error.rs  lib.rs  ref_action.rs  ref_alloc.rs  ref_alloc_tests.rs  refs.rs  refs_store.rs  refs_store_tests.rs  refs_tests.rs  roles.rs  snapshot.rs  snapshot_ref.rs  snapshot_ref_alloc_tests.rs  snapshot_ref_tests.rs  snapshot_tests.rs  trace.rs
crates/ffi/include/: agent_desktop.h
crates/ffi/src/: adapter.rs  error.rs
crates/ffi/tests/: c_abi_actions.rs  c_abi_inputs.rs  c_abi_layout.rs  c_abi_lifecycle.rs  error_lifetime.rs
crates/macos/: build.rs
crates/macos/src/: adapter.rs  lib.rs
docs/: phases.md
docs/solutions/best-practices/: keep-ffi-action-policy-aligned-with-cli-2026-05-12.md  macos-gesture-headless-capability-2026-06-10.md  playwright-grade-desktop-reliability-2026-06-02.md  (+1 more)
npm/: package.json
scripts/: e2e-macos.sh
skills/agent-desktop/: SKILL.md
skills/agent-desktop-ffi/: SKILL.md
src/: Cargo.toml  batch.rs  cli.rs  cli_args.rs  cli_args_actions.rs  cli_args_notifications.rs  cli_args_system.rs  command_contract_tests.rs  command_policy.rs  command_policy_tests.rs  dispatch.rs  dispatch_parse.rs  main.rs
src/batch/: mod.rs
src/cli/: contract_tests.rs  help_after.txt  mod.rs
src/cli_args/: actions.rs  control.rs  mod.rs  system.rs
src/command_policy/: mod.rs  tests.rs
src/dispatch/: mod.rs
src/tests/: batch_test.rs  browser_test.rs  clipboard_test.rs  conformance.rs  interaction_test.rs  keyboard_test.rs  mouse_test.rs  notifications_test.rs  scroll_test.rs  snapshot_test.rs  system_control_test.rs  wait_test.rs  window_test.rs
src/tests/common/: mod.rs
tests/conformance/: README.md  ref_action_contract.rs
tests/e2e/: run.sh
tests/fixture-app/: AgentDeskFixture.swift  FixtureComponents.swift  build.sh
(+155 files in other folders)
